# rinha-frontend

./: .gitignore  build.sh  index.html  index.js  parser.js  serve.sh
json-viewer/: README.md  bun.lockb  index.html  index.jsx  package-lock.json  package.json  vite.config.js
json-viewer/src/: App.vue  Row.vue  main.js
rinha-json/: Cargo.toml  Makefile
rinha-json/src/: lib.rs
worker/: bun.lockb  index.js  package.json  parser.js  tokenizer.js  tokenizer.ts
