[package]
name = "rinha-json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
serde-wasm-bindgen = "0.6"
simd-json = "0.11.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'MessageEvent',
    'Window',
    'Worker',
]
